<resources>
    <string name="app_name">VolunteerFinder</string>
    <string name="welcome_message">Welcome to Volunteer Finder!</string>
    <string name="title_activity_maps">Map</string>
    <string name="loginTab">Login</string>
    <string name="signupTab">Sign Up</string>
    <string name="userName">Email</string>
    <string name="orgname">Organization</string>
    <string name="password">Password</string>
    <string name="loginIcon">loginIcon</string>
    <string name="loginI">&amp;#xf2f6</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Address">Address</string>
    <string name="SignInButton">Sign In</string>
    <string name="SignUpButton">Sign up</string>
    <string name="organization">Sign in as an Organization</string>
    <string name="organizationSignUp">Sign up as an Organization</string>
    <string name="back">Go Back</string>
    <string name="logo">Logo</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="capacity">Capacity</string>
    <string name="webpage">Website</string>

</resources>