<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/standard_23"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:layout_weight="7"
                android:hint="@string/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/capacity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:layout_weight="3"
                android:hint="@string/capacity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"
                android:layout_weight="2"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/baseline_calendar_icon" />

        </LinearLayout>


        <TextView
            android:id="@+id/datesSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/description"
            app:counterEnabled="true"
            app:counterMaxLength="1000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Submit" />


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>